--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="header-content">
       <div class="profile-pic">
-        <img src="./assets/your-image.jpg" alt="Bharath S M" />
+        <img src="./your-image.jpg" alt="Bharath S M" />
       </div>
       <div class="intro-text">
         <h1>Bharath S M</h1>
