--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="section-box">
       <h2>Resume</h2>
       <p>You can download my latest resume below:</p>
-      <a href="./assets/resume.pdf" class="btn" download><i class="fas fa-download"></i> Download Resume</a>
+      <a href="./resume.pdf" class="btn" download><i class="fas fa-download"></i> Download Resume</a>
     </div>
   </section>
 
