--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="header-content">
       <div class="profile-pic">
-        <img src="./your-image.jpg" alt="Bharath S M" />
+        <img src="./assets/your-image.jpg" alt="Bharath S M" />
       </div>
       <div class="intro-text">
         <h1>Bharath S M</h1>
@@ -37,13 +37,17 @@
     </div>
   </section>
 
-  <section id="resume" class="section">
-    <div class="section-box">
-      <h2>Resume</h2>
-      <p>You can download my latest resume below:</p>
-      <a href="./resume.pdf" class="btn" download><i class="fas fa-download"></i> Download Resume</a>
-    </div>
-  </section>
+ <section id="resume" class="section">
+  <div class="section-box">
+    <h2>Resume</h2>
+    <p>You can download my latest resume here:</p>
+    <a href="./assets/resume.pdf" class="btn" download title="Download Resume PDF">
+      <i class="fas fa-download"></i>
+      <span>Download Resume</span>
+    </a>
+  </div>
+</section>
+
 
   <section id="projects" class="section">
     <div class="section-box">
@@ -65,15 +69,17 @@
     </div>
   </section>
 
-  <section id="contact" class="section">
-    <div class="section-box">
-      <h2>Contact</h2>
-      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:bharathmanu1235@gmail.com">bharathmanu1235@gmail.com</a></p>
-      <p><i class="fab fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/91XXXXXXXXXX" target="_blank">+91 8073293765</a></p>
-      <p><i class="fab fa-instagram"></i> Instagram: <a href="https://github.com/Bharath-56" target="_blank">@bharath-56</a></p>
-      <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/bharathsm0304?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">linkedin.com/in/bharathsm</a></p>
-    </div>
-  </section>
+ <section id="contact" class="section">
+  <div class="section-box">
+    <h2>Contact</h2>
+    <p><i class="fas fa-envelope"></i> Email: <a href="mailto:bharathmanu1235@gmail.com">bharathmanu1235@gmail.com</a></p>
+    <p><i class="fab fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/918073293765" target="_blank">+91 8073293765</a></p>
+    <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/_bharath_kuruba_?igsh=MXV1bzBlamp6NXBiMg==" target="_blank">_bharath_kuruba_</a></p>
+    <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/bharathsm0304?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">linkedin.com/in/bharathsm</a></p>
+    <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Bharath-56" target="_blank">Bharath-56</a></p>
+  </div>
+</section>
+
 
   <footer>
     <p>© 2025 Bharath S M. All rights reserved.</p>
