--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="header-content">
       <div class="profile-pic">
-        <img src="./assets/your-image.jpg" alt="Bharath S M" />
+        <img src="./your-image.jpg" alt="Bharath S M" />
       </div>
       <div class="intro-text">
         <h1>Bharath S M</h1>
@@ -41,7 +41,7 @@
   <div class="section-box">
     <h2>Resume</h2>
     <p>You can download my latest resume here:</p>
-    <a href="./assets/resume.pdf" class="btn" download title="Download Resume PDF">
+    <a href="./resume.pdf" class="btn" download title="Download Resume PDF">
       <i class="fas fa-download"></i>
       <span>Download Resume</span>
     </a>
