--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="section-box">
     <h2>Resume</h2>
     <p>You can download my latest resume here:</p>
-    <a href="./resume.pdf" class="btn" download title="Download Resume PDF">
+    <a href="./bharath_final.pdf" class="btn" download title="Download Resume PDF">
       <i class="fas fa-download"></i>
       <span>Download Resume</span>
     </a>
