--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
       <h2>Projects</h2>
       <div class="projects-container">
         <div class="project-card">
-          <h3>Network Traffic Analyzer</h3>
-          <p>Built with C++ and libpcap, this project simulates and analyzes network traffic, including protocol distribution, IP analysis, and port scanning.</p>
+          <h3>QuickReserve</h3>
+          <p>Built a full-stack Train Ticket Booking web app using Node.js, Express, PostgreSQL, and vanilla JavaScript with secure user authentication, email verification, and dynamic search with autocomplete. Included an admin panel for managing trains, users, and bookings through a session-based access control system.</p>
         </div>
         <div class="project-card">
-          <h3>The Team Catalyst</h3>
-          <p>A full-stack project management tool using Node.js, Express, PostgreSQL, and modern frontend technologies.</p>
+          <h3>Project Management Tool</h3>
+          <p>Built a lightweight Project Management Tool using Node.js, Express, PostgreSQL, WebSockets, and vanilla JavaScript with features like project creation, task management, and real-time chat. Integrated Kanban boards, Gantt chart visualization, and role-based access for admins and users.</p>
         </div>
         <div class="project-card">
-          <h3>LAN-based Attendance System</h3>
-          <p>Uses LAN and OOP principles to maintain and log student attendance efficiently with PostgreSQL as backend.</p>
+          <h3>-------</h3>
+          <p>-------------</p>
         </div>
       </div>
     </div>
