--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bharath S M | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Font Awesome Icons -->
+
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   />
 </head>
 <body>
+
+
   <header>
     <div class="header-content">
       <div class="profile-pic">
@@ -30,6 +32,7 @@
     </div>
   </header>
 
+ 
   <section id="about" class="section">
     <div class="section-box">
       <h2>About Me</h2>
@@ -37,16 +40,17 @@
     </div>
   </section>
 
- <section id="resume" class="section">
-  <div class="section-box">
-    <h2>Resume</h2>
-    <p>You can download my latest resume here:</p>
-    <a href="./bharath_final.pdf" class="btn" download title="Download Resume PDF">
-      <i class="fas fa-download"></i>
-      <span>Download Resume</span>
-    </a>
-  </div>
-</section>
+  
+  <section id="resume" class="section">
+    <div class="section-box">
+      <h2>Resume</h2>
+      <p>You can download my latest resume here:</p>
+      <a href="./bharath_final.pdf" class="btn" download title="Download Resume PDF">
+        <i class="fas fa-download"></i>
+        <span>Download Resume</span>
+      </a>
+    </div>
+  </section>
 
 
   <section id="projects" class="section">
@@ -55,34 +59,36 @@
       <div class="projects-container">
         <div class="project-card">
           <h3>QuickReserve</h3>
-          <p>Built a full-stack Train Ticket Booking web app using Node.js, Express, PostgreSQL, and vanilla JavaScript with secure user authentication, email verification, and dynamic search with autocomplete. Included an admin panel for managing trains, users, and bookings through a session-based access control system.</p>
+          <p>Built a full-stack Train Ticket Booking web app using Node.js, Express, PostgreSQL, and vanilla JavaScript with secure user authentication, email verification, and dynamic search with autocomplete. Includes an admin panel for managing trains, users, and bookings.</p>
         </div>
         <div class="project-card">
           <h3>Project Management Tool</h3>
-          <p>Built a lightweight Project Management Tool using Node.js, Express, PostgreSQL, WebSockets, and vanilla JavaScript with features like project creation, task management, and real-time chat. Integrated Kanban boards, Gantt chart visualization, and role-based access for admins and users.</p>
+          <p>A lightweight team project management app using Node.js, Express, PostgreSQL, WebSockets. Features include Kanban board, Gantt chart, real-time chat, and role-based access control.</p>
         </div>
         <div class="project-card">
-          <h3>-------</h3>
-          <p>-------------</p>
+          <h3>                         </h3>
+          <p>                           -                                     </p>
         </div>
       </div>
     </div>
   </section>
 
- <section id="contact" class="section">
-  <div class="section-box">
-    <h2>Contact</h2>
-    <p><i class="fas fa-envelope"></i> Email: <a href="mailto:bharathmanu1235@gmail.com">bharathmanu1235@gmail.com</a></p>
-    <p><i class="fab fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/918073293765" target="_blank">+91 8073293765</a></p>
-    <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/_bharath_kuruba_?igsh=MXV1bzBlamp6NXBiMg==" target="_blank">_bharath_kuruba_</a></p>
-    <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/bharathsm0304?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">linkedin.com/in/bharathsm</a></p>
-    <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Bharath-56" target="_blank">Bharath-56</a></p>
-  </div>
-</section>
+
+  <section id="contact" class="section">
+    <div class="section-box">
+      <h2>Contact</h2>
+      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:bharathmanu1235@gmail.com">bharathmanu1235@gmail.com</a></p>
+      <p><i class="fab fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/918073293765" target="_blank">+91 8073293765</a></p>
+      <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/_bharath_kuruba_?igsh=MXV1bzBlamp6NXBiMg==" target="_blank">@_bharath_kuruba_</a></p>
+      <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/bharathsm0304" target="_blank">linkedin.com/in/bharathsm</a></p>
+      <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Bharath-56" target="_blank">github.com/Bharath-56</a></p>
+    </div>
+  </section>
 
 
   <footer>
     <p>© 2025 Bharath S M. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
