--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       <h2>Projects</h2>
       <div class="projects-container">
         <div class="project-card">
-          <h3>QuickReserve</h3>
+          <h3><a href="https://github.com/Bharath-56/quickreserve">QuickReserve</a></h3>
           <p>Built a full-stack Train Ticket Booking web app using Node.js, Express, PostgreSQL, and vanilla JavaScript with secure user authentication, email verification, and dynamic search with autocomplete. Includes an admin panel for managing trains, users, and bookings.</p>
         </div>
         <div class="project-card">
-          <h3>Project Management Tool</h3>
+          <h3><a href="https://github.com/Bharath-56/Project_Management_tool">Project Management Tool</a></h3>
           <p>A lightweight team project management app using Node.js, Express, PostgreSQL, WebSockets. Features include Kanban board, Gantt chart, real-time chat, and role-based access control.</p>
         </div>
         <div class="project-card">
