--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       <h2>Contact</h2>
       <p><i class="fas fa-envelope"></i> Email: <a href="mailto:bharathmanu1235@gmail.com">bharathmanu1235@gmail.com</a></p>
       <p><i class="fab fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/918073293765" target="_blank">+91 8073293765</a></p>
-      <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/_bharath_kuruba_?igsh=MXV1bzBlamp6NXBiMg==" target="_blank">@_bharath_kuruba_</a></p>
-      <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/bharathsm0304" target="_blank">linkedin.com/in/bharathsm</a></p>
-      <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Bharath-56" target="_blank">github.com/Bharath-56</a></p>
+      <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/_bharath_kuruba_?igsh=MXV1bzBlamp6NXBiMg==" target="_blank">@bharath</a></p>
+      <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/bharathsm0304" target="_blank">bharathsm</a></p>
+      <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Bharath-56" target="_blank">Bharath-56</a></p>
     </div>
   </section>
 
