--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bharath S M | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
-
+  <!-- Font Awesome Icons -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   />
 </head>
 <body>
-
-
   <header>
     <div class="header-content">
       <div class="profile-pic">
-        <img src="./your-image.jpg" alt="Bharath S M" />
+        <img src="./assets/your-image.jpg" alt="Bharath S M" />
       </div>
       <div class="intro-text">
         <h1>Bharath S M</h1>
@@ -32,63 +30,69 @@
     </div>
   </header>
 
- 
   <section id="about" class="section">
     <div class="section-box">
       <h2>About Me</h2>
-      <p>Hi! I'm Bharath S M, an Electronics and Communication Engineering student at Nitte Meenakshi Institute of Technology, specializing in full stack development and network simulation. My work is driven by a strong foundation in software engineering principles and a commitment to developing practical, high-impact technological solutions.</p>
+      <p>Hi! I'm Bharath S M, an ECE student passionate about technology, software development, and innovation. I enjoy building impactful projects that solve real-world problems using modern tools and concepts.</p>
     </div>
   </section>
 
-  
   <section id="resume" class="section">
     <div class="section-box">
       <h2>Resume</h2>
       <p>You can download my latest resume here:</p>
-      <a href="./bharath_final.pdf" class="btn" download title="Download Resume PDF">
+      <a href="./assets/resume.pdf" class="btn" download title="Download Resume PDF">
         <i class="fas fa-download"></i>
         <span>Download Resume</span>
       </a>
     </div>
   </section>
 
-
   <section id="projects" class="section">
     <div class="section-box">
       <h2>Projects</h2>
       <div class="projects-container">
         <div class="project-card">
-          <h3><a href="https://github.com/Bharath-56/quickreserve">QuickReserve</a></h3>
-          <p>Built a full-stack Train Ticket Booking web app using Node.js, Express, PostgreSQL, and vanilla JavaScript with secure user authentication, email verification, and dynamic search with autocomplete. Includes an admin panel for managing trains, users, and bookings.</p>
+          <h3>QuickReserve</h3>
+          <p>Full-stack Train Ticket Booking web app using Node.js, Express, PostgreSQL, and vanilla JavaScript. Features include secure login, email verification, search, and admin dashboard.</p>
         </div>
         <div class="project-card">
-          <h3><a href="https://github.com/Bharath-56/Project_Management_tool">Project Management Tool</a></h3>
-          <p>A lightweight team project management app using Node.js, Express, PostgreSQL, WebSockets. Features include Kanban board, Gantt chart, real-time chat, and role-based access control.</p>
+          <h3>Project Management Tool</h3>
+          <p>Lightweight management tool using Node.js, Express, PostgreSQL, WebSockets, and JS. Features task boards, real-time chat, Gantt charts, and role-based access.</p>
         </div>
         <div class="project-card">
-          <h3></h3>
-          <p></p>
+          <h3>LAN-based Attendance System</h3>
+          <p>A LAN-based system using OOP and PostgreSQL to manage attendance logs within a local network setup.</p>
         </div>
       </div>
     </div>
   </section>
 
-
   <section id="contact" class="section">
     <div class="section-box">
       <h2>Contact</h2>
-      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:bharathmanu1235@gmail.com">bharathmanu1235@gmail.com</a></p>
-      <p><i class="fab fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/918073293765" target="_blank">+91 8073293765</a></p>
-      <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/_bharath_kuruba_?igsh=MXV1bzBlamp6NXBiMg==" target="_blank">@bharath</a></p>
-      <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/bharathsm0304" target="_blank">bharathsm</a></p>
-      <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Bharath-56" target="_blank">Bharath-56</a></p>
+      <div class="contact-icons">
+        <a href="mailto:bharathmanu1235@gmail.com" target="_blank" title="Email">
+          <i class="fas fa-envelope"></i>
+        </a>
+        <a href="https://wa.me/918073293765" target="_blank" title="WhatsApp">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://www.instagram.com/_bharath_kuruba_" target="_blank" title="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/bharathsm0304" target="_blank" title="LinkedIn">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/Bharath-56" target="_blank" title="GitHub">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
     </div>
   </section>
-
 
   <footer>
     <p>© 2025 Bharath S M. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
