--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section id="about" class="section">
     <div class="section-box">
       <h2>About Me</h2>
-      <p>Hi! I'm Bharath S M, an ECE student passionate about technology, software development, and innovation. I enjoy building impactful projects that solve real-world problems using modern tools and concepts.</p>
+      <p>Hi! I'm Bharath S M, an Electronics and Communication Engineering student at Nitte Meenakshi Institute of Technology, specializing in full stack development and network simulation. My work is driven by a strong foundation in software engineering principles and a commitment to developing practical, high-impact technological solutions.</p>
     </div>
   </section>
 
@@ -53,16 +53,16 @@
       <h2>Projects</h2>
       <div class="projects-container">
         <div class="project-card">
-          <h3>QuickReserve</h3>
+          <h3><a href="https://github.com/Bharath-56/quickreserve">QuickReserve</a></h3>
           <p>Full-stack Train Ticket Booking web app using Node.js, Express, PostgreSQL, and vanilla JavaScript. Features include secure login, email verification, search, and admin dashboard.</p>
         </div>
         <div class="project-card">
-          <h3>Project Management Tool</h3>
+          <h3><a href="https://github.com/Bharath-56/Project_Management_tool">Project Management Tool</a></h3>
           <p>Lightweight management tool using Node.js, Express, PostgreSQL, WebSockets, and JS. Features task boards, real-time chat, Gantt charts, and role-based access.</p>
         </div>
         <div class="project-card">
-          <h3>LAN-based Attendance System</h3>
-          <p>A LAN-based system using OOP and PostgreSQL to manage attendance logs within a local network setup.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
     </div>
@@ -75,18 +75,19 @@
         <a href="mailto:bharathmanu1235@gmail.com" target="_blank" title="Email">
           <i class="fas fa-envelope"></i>
         </a>
+         <a href="https://github.com/Bharath-56" target="_blank" title="GitHub">
+          <i class="fab fa-github"></i>
+        </a>
+           <a href="https://www.linkedin.com/in/bharathsm0304" target="_blank" title="LinkedIn">
+          <i class="fab fa-linkedin"></i>
+        </a>
         <a href="https://wa.me/918073293765" target="_blank" title="WhatsApp">
           <i class="fab fa-whatsapp"></i>
         </a>
         <a href="https://www.instagram.com/_bharath_kuruba_" target="_blank" title="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://www.linkedin.com/in/bharathsm0304" target="_blank" title="LinkedIn">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://github.com/Bharath-56" target="_blank" title="GitHub">
-          <i class="fab fa-github"></i>
-        </a>
+     
       </div>
     </div>
   </section>
