--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
            <a href="https://www.linkedin.com/in/bharathsm0304" target="_blank" title="LinkedIn">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://wa.me/918073293765" target="_blank" title="WhatsApp">
+        <a href="https://wa.me/+91 8073293765" target="_blank" title="WhatsApp">
           <i class="fab fa-whatsapp"></i>
         </a>
         <a href="https://www.instagram.com/_bharath_kuruba_" target="_blank" title="Instagram">
