--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section id="about" class="section">
     <div class="section-box">
       <h2>About Me</h2>
-      <p>Hi! I'm Bharath S M, an Electronics and Communication Engineering student at Nitte Meenakshi Institute of Technology, specializing in full stack development and network simulation. My work is driven by a strong foundation in software engineering principles and a commitment to developing practical, high-impact technological solutions.</p>
+      <p>Hi! I'm Bharath S M, an Electronics and Communication Engineering student with a passion for full-stack development and problem-solving. Focused on building efficient, real-world software solutions.</p>
     </div>
   </section>
 
