--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Bharath S M. All rights reserved.</p>
+    <p>© 2025 Bharath S M. All rights reserved.</p>git initial-scale
   </footer>
 </body>
 </html>
