--- a/index.html
+++ b/index.html
@@ -161,18 +161,20 @@
     </div>
   </section>
 
+  <!-- Updated Contact Section -->
   <section id="contact" class="section">
     <div class="section-box">
       <h2>Contact</h2>
+      <p>If you’d like to get in touch, feel free to reach out through any of the platforms below:</p>
       <div class="contact-icons">
-        <a href="mailto:bharathmanu1235@gmail.com"><i class="fas fa-envelope"></i></a>
-        <a href="https://github.com/Bharath-56" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://linkedin.com/in/bharathsm0304" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://wa.me/918073293765" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="mailto:bharathmanu1235@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+        <a href="https://github.com/Bharath-56" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com/in/bharathsm0304" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="https://wa.me/918073293765" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
       </div>
+    
     </div>
   </section>
-
 
   <footer>
     <p>© 2025 Bharath S M. All rights reserved.</p>
