Update resume link in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p class="hero-subtitle">
         <span>ECE Student</span> | <span>Developer</span> | <span>Tech Enthusiast</span>
       </p>
-      <a href="./Bharath_Resume.pdf" class="btn" download>
+      <a href="./Bharath S M_1NT22EC034.pdf" class="btn" download>
         <i class="fas fa-download"></i> Download Resume
       </a>
     </div>
